--- a/tickerapp/templates/tickerapp/profile.html
+++ b/tickerapp/templates/tickerapp/profile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Ticker Site</title>
+        <title>Ticker Profile</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -17,8 +17,8 @@
     <body>
         <a href="{% url 'home' %}">HOME</a>
         <div>
-            {% if request.user.is_authenticated %}
-            <a href="{% url 'profile' request.user.id %}">{{request.user.username}}</a>
+            {% if user.is_authenticated %}
+            <p>{{user.username}}</p>
             <a href="{% url 'logout' %}">
                 <p>Logout</p>
             </a>
@@ -28,22 +28,22 @@
             </a>
             {% endif %}
         </div>
-        <h1>Hi, this is Ticker</h1>
-        <p>On this page you can type any text in the form below and I will give you a ticker video file with your text</p>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {% if request.user.is_authenticated %}
-            <button type="submit" name="create">Create Video</button>
-            {% endif %}
-            <button type="submit" name="create_and_download">Create and Download</button>
-        </form>
-        {% if request.user.is_authenticated and tickers%}
-        <h3>Last created ticker:</h3>
+        <h1>My profile </h1>
+        <div class='userinfo'>
+            <p>Username: {{user.username}}</p>
+            <p>First Name: {{user.first_name}}</p>
+            <p>Last Name: {{user.last_name}}</p>
+            <p>Email: {{user.email}}</p>
+        </div>
+        <a href="{% url 'edit_profile' user.id %}">edit</a>
+
+
+        {% if request.user.is_authenticated %}
+        <h3>My latest created ticker:</h3>
         <p>
             Ticker Name: {{tickers.first.text}} ({{tickers.first.timestamp|timesince}} ago) <a href="{% url 'download' tickers.first.id %}">download link</a>
         </p>
-        <h3>Your created tickers:</h3>
+        <h3>Created tickers:</h3>
         <div class='ticker_table'>
         <table>
             <tr>
@@ -61,7 +61,6 @@
             </tr>
             {% endfor %}
         </table>
-        <a href="{% url 'profile' user.id %}">View all your tickers</a>
         </div>
         {% endif %}
     </body>
