--- a/tickerapp/templates/tickerapp/edit_profile.html
+++ b/tickerapp/templates/tickerapp/edit_profile.html
@@ -1,32 +1,22 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Edit Ticker Profile</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
+{% extends 'main.html' %}
+{% block content %}
+<body>
+    <a href="{% url 'home' %}">HOME</a>
+    <h1>Edit {{user.username}}'s profile</h1>
+    <form class="form" action="" method="POST">
+        {% csrf_token %}
 
-    <body>
-        <a href="{% url 'home' %}">HOME</a>
-        <h1>Edit {{user.username}}'s profile</h1>
+        {% for field in form %}
+        <div class="form__group">
+          <label>{{field.label}}</label>
+          {{field}}
+        </div>
+        {% endfor %}
 
-        <form class="form" action="" method="POST">
-            {% csrf_token %}
-    
-            {% for field in form %}
-            <div class="form__group">
-              <label>{{field.label}}</label>
-              {{field}}
-            </div>
-            {% endfor %}
-    
-            <div class="form__action">
-              <a class="btn btn--dark" href="{% url 'profile' user.id %}">Cancel</a>
-              <button class="btn btn--main" type="submit">Update</button>
-            </div>
-          </form>
-    </body>
-</html>
+        <div class="form__action">
+          <a class="btn btn--dark" href="{% url 'profile' user.id %}">Cancel</a>
+          <button class="btn btn--main" type="submit">Update</button>
+        </div>
+      </form>
+</body>
+{% endblock %}
