--- a/tickerapp/templates/tickerapp/home.html
+++ b/tickerapp/templates/tickerapp/home.html
@@ -1,68 +1,46 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Ticker Site</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <style>
-        table, th, td {
-          border:1px solid black;
-        }
-    </style>
+{% extends "main.html" %}
 
-    <body>
-        <a href="{% url 'home' %}">HOME</a>
-        <div>
-            {% if request.user.is_authenticated %}
-            <a href="{% url 'profile' request.user.id %}">{{request.user.username}}</a>
-            <a href="{% url 'logout' %}">
-                <p>Logout</p>
-            </a>
-            {% else %}
-            <a href="{% url 'login' %}">
-                <p>Login</p>
-            </a>
-            {% endif %}
-        </div>
-        <h1>Hi, this is Ticker</h1>
-        <p>On this page you can type any text in the form below and I will give you a ticker video file with your text</p>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {% if request.user.is_authenticated %}
-            <button type="submit" name="create">Create Video</button>
-            {% endif %}
-            <button type="submit" name="create_and_download">Create and Download</button>
-        </form>
-        {% if request.user.is_authenticated and tickers%}
-        <h3>Last created ticker:</h3>
-        <p>
-            Ticker Name: {{tickers.first.text}} ({{tickers.first.timestamp|timesince}} ago) <a href="{% url 'download' tickers.first.id %}">download link</a>
-        </p>
-        <h3>Your created tickers:</h3>
-        <div class='ticker_table'>
-        <table>
-            <tr>
-                <th>Filename</th>
-                <th>Text</th>
-                <th>Date Created</th>
-                <th>Download</th>
-            </tr>
-            {% for ticker in tickers %}
-            <tr>
-                <td>{{ticker.filename}}</td>
-                <td>{{ticker.text}}</td>
-                <td>{{ticker.timestamp}}</td>
-                <td><a href="{% url 'download' ticker.id %}">download</a></td>
-            </tr>
-            {% endfor %}
-        </table>
-        <a href="{% url 'profile' user.id %}">View all your tickers</a>
-        </div>
+{% block content %}
+{% load static %}
+<body>
+    <h1>Hi, this is Ticker</h1>
+    <p>On this page you can type any text in the form below and I will give you a ticker video file with your text</p>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if request.user.is_authenticated %}
+        <button type="submit" name="create">Create Video</button>
         {% endif %}
-    </body>
-</html>
+        <button type="submit" name="create_and_download">Create and Download</button>
+    </form>
+    {% if request.user.is_authenticated and tickers%}
+    <h3>Last created ticker:</h3>
+    <p>
+        Ticker Name: {{tickers.first.text}} ({{tickers.first.timestamp|timesince}} ago) <a href="{% url 'download' tickers.first.id %}">download link</a>
+    </p>
+    <h3>Your created tickers:</h3>
+    <div class='ticker_table'>
+    <table>
+        <tr>
+            <th>Filename</th>
+            <th>Text</th>
+            <th>Date Created</th>
+            <th>Download</th>
+        </tr>
+        {% for ticker in tickers %}
+        <tr>
+            <td>{{ticker.filename}}</td>
+            <td>{{ticker.text}}</td>
+            <td>{{ticker.timestamp}}</td>
+            <td><a href="{% url 'download' ticker.id %}" class="download__img">
+                <img src= "{% static 'ticker/images/dwld.svg' %}" width='30' height='20'>
+            </a></td>
+        </tr>
+        {% endfor %}
+    </table>
+    <a href="{% url 'profile' user.id %}">View all of your tickers</a>
+    </div>
+    {% endif %}
+</body>
+
+{% endblock %}
