--- a/static/ticker/styles/style.css
+++ b/static/ticker/styles/style.css
@@ -1,17 +1,169 @@
-* {
+html {
     font-family: "Open Sans", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: inherit;
+    font-weight: 500;
+    color: #B9B4C7;
+    background-color: #352F44;
 }
 
-.header__logo {
-    text-align: center;
-    font-size: 50px;
+a {
     text-decoration: none;
-    color: slateblue;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:visited {
+    color: inherit;
+}
+
+.header {
+    max-width: 1200px;
+    /* min-height: 100; */
+    margin: 0 auto;
+    background-color: #5C5470;
+    border-radius: 10px;
+}
+
+.header__inner {
+    display: flex;
+    height: 70px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.header-logo a {
+    font-size: 30px;
+    font-weight: bolder;
+    color: #FAF0E6;
+}
+
+.header-user-log {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.header-userinfo {
+    display: flex;
+    align-items: center;
+    margin: 5px 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.log-in-out__item {
+    width: 60px;
+    height: 30px;
+    margin: 0 10px;
+    background-color: #352F44;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.nickname {
+    font-size: 80%;
+    margin: 0 10px;
+    text-decoration: underline;
+}
+
+.username {
+    margin-left: 10px;
+}
+
+
+main,
+.profile__body,
+.login-register__body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* padding: 20px; */
+    text-align: center;
+}
+
+.profile__body,
+.login-register__body {
+    text-align: left;
+}
+
+main h1 {
+    font-size: larger;
+}
+
+/* .last-created {
+    margin-top: 20px;
+} */
+
+.ticker-table {
+    margin-top: 10px;
+}
+
+.view-tikers__link {
+    margin-top: 30px;
+    text-decoration: underline;
+}
+
+input {
+    background-color: #FAF0E6;
+    border: 2px solid #5C5470;
+    border-radius: 5px;
+}
+
+button,
+input[type=submit] {
+    background-color: #5C5470;
+    border: 2px solid #FAF0E6;
+    border-radius: 5px;
+    color: #B9B4C7;
+    font-size: 90%;
+    font-weight: bold;
+}
+
+button:hover,
+input[type=submit]:hover {
+    background-color: #352F44;
 }
 
 table,
 th,
 td {
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid #B9B4C7;
+}
+
+.last-created a,
+.ticker-table a {
+    border: 1px solid #B9B4C7;
+    background-color: #5C5470;
+}
+
+.last-created a:hover,
+.ticker-table a:hover {
+    background-color: #352F44;
+}
+
+.btn-btn--dark {
+    text-decoration: underline;
+}
+
+.edit-profile {
+    text-decoration: underline;
+    font-size: 70%;
+}
+
+.login-register__body a {
+    text-decoration: underline;
 }
