--- a/tickerapp/templates/tickerapp/edit_profile.html
+++ b/tickerapp/templates/tickerapp/edit_profile.html
@@ -1,7 +1,6 @@
 {% extends 'main.html' %}
 {% block content %}
 <body>
-    <a href="{% url 'home' %}">HOME</a>
     <h1>Edit {{user.username}}'s profile</h1>
     <form class="form" action="" method="POST">
         {% csrf_token %}
@@ -14,7 +13,7 @@
         {% endfor %}
 
         <div class="form__action">
-          <a class="btn btn--dark" href="{% url 'profile' user.id %}">Cancel</a>
+          <a class="btn-btn--dark" href="{% url 'profile' user.id %}">Cancel</a>
           <button class="btn btn--main" type="submit">Update</button>
         </div>
       </form>
