Add userprofile unit test

--- a/tickerapp/templates/tickerapp/last_ticker.html
+++ b/tickerapp/templates/tickerapp/last_ticker.html
@@ -1,3 +1,4 @@
+{% if tickers.first %}
 {% load static %}
 <div class="last-created">
     <p>
@@ -7,3 +8,4 @@
         <br> with text: "{{tickers.first.text}}" <br> ({{tickers.first.timestamp|timesince}} ago)
     </p>
 </div>
+{% endif %}
